# 3Dgraphics-phong-lighting

./: .gitignore  CMakeLists.txt  README.md
headers/: Mesh.h  Model.h  Sphere.h
libheadfiles/include/glad/: glad.h
shaders/: fragmentShader.glsl  sphereFragment.glsl  vertexShader.glsl
src/: Sphere.cpp  glad.c  main.cpp
